fix spacing on unlock screen

--- a/www/styles.css
+++ b/www/styles.css
@@ -122,8 +122,7 @@ button:not(.x-button):enabled:active, input[type=submit]:active:enabled {
 }
 
 #unlock {
-    margin-left: 1em;
-    max-width: 4.2em;
+    margin-left: 0.2em;
 }
 
 .body {
